Made updates to the Google logo and search bar

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
         }
 
         .search-form {
-            display: flex;
-            align-items: center;
             position: fixed;
-            right: 40%;
-            top: 25%;
+            top: 25%; 
+            left: 45%; 
+            transform: translate(-50%, -50%);
+            max-width: 100%;
+            height: auto;
+
         }
 
         .search-form input[type="text"],
@@ -42,7 +44,11 @@
         .google-logo {
             position: fixed;
             top: 15%;
-            left: 43.5%;
+            left: 45%;
+            transform: translate(-50%, -50%);
+            max-width: 100%;
+            height: auto;
+            z-index: 1; 
         }
     </style>
 </head>
